# weiweilun

./: .gitattributes  .gitignore  README.md  pyproject.toml  方案1.md  论文1.md
artifacts/: final-aggregate.csv  final-aggregate.json
artifacts/final-v10/: aggregate-all.csv  aggregate-all.json  (+7 more)
configs/: default.json
docs/: ARCHITECTURE_AND_ASSUMPTIONS.md  FINAL_AUDIT.md  PAPER_V1_EXPERIMENTS.md  SPEC_AUDIT.md
examples/: adaptive-oracle-small.json  one-shot-ready-priority-numerical.json  paper-v1-load-matrix.json  paper-v1-sensitivity.json  sweep-lyapunov-v.json  sweep-mpc-horizon.json  sweep-privacy-boundary.json  sweep-rsu-admission-concurrency.json  sweep-scenario-count.json  sweep-small.json
profiles/: synthetic_profile.json
schemas/: config.schema.json  profile.schema.json  trace.schema.json
tests/: conftest.py  test_adapters.py  test_branch_telemetry_context.py  test_certificates.py  test_checkpoint.py  test_cli_smoke.py  test_document_integrity.py  test_events_state_resources.py  test_experiments.py  test_ingress_failure.py  test_mechanism_metrics.py  test_numerical.py  test_outputs_manifest.py  test_packets_profiles.py  test_paper_experiment_audits.py  test_physics_safety.py  test_policies_integration.py  test_resource_semantics.py  test_scenario_anchors.py  test_selection.py  test_sensitivity_analysis.py  test_snapshot_recovery.py  test_statistics.py  test_telemetry.py  test_terminal_audit.py  test_thermal_energy.py  test_virtual_queue_metrics.py  test_wireless_capacity.py
traces/: synthetic_scenario_trace.json  synthetic_trace.json
(+1561 files in other folders)
