[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "privacy-edge-sim"
version = "0.1.0"
description = "Continuous-time discrete-event simulator for privacy-safe anonymous-image edge inference"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Research use"}
authors = [{name = "Research simulator maintainers"}]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0", "jsonschema>=4.23", "ruff>=0.12"]
parquet = ["pyarrow>=15.0"]

[project.scripts]
privacy-edge-sim = "privacy_edge_sim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
